css/app.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Inter', sans-serif;
}
ul,ol,menu{
    list-style:none;
}
nav a{
    text-decoration: none;
    color: currentColor;
}
button{
    background-color: currentColor;
    border: none;
    color: currentColor;
}
/* general button */
.button{
    background-color: transparent;
    height: 40px;
    /* border: 1px solid black; */
    text-align: left;
    margin-right: auto;
    font-size: 16px;
}
.blue_button{
    color: white;
    background-color: rgb(0, 97, 255);
}
.hero_col-1 button{
    padding: 5px;
}
header{
    min-height: 80px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* border-bottom: 1px solid black; */
}


/* flex */

 nav ul, .flex{
    display: flex;
}

nav li{
    padding: 10px 20px;
    font-size: 15px;
    
}
.grow{
    flex-grow: 1;
    padding-left: 20px;
}
nav{
    justify-content: space-between;
   align-content: center;
   text-align: center;
   width: 100%;
   padding-right: 10px;
   padding-left: 10px;
}

/* section HERO */

.hero{
    padding-top: 90px;
    padding-bottom: 25px;
    background-color: rgb(180, 208, 231);
}


/* container */

.container-large{
    width: 1200px;
    margin: 0 auto;
}

.container-small{
    width: 1000px;
    margin: 0 auto;
}

/* row */

.hero_row{
    display: flex;
}

/* col */
.hero_col-1 p {
    font-size: 16px;
    font-weight: lighter;
}

.hero_col-1{
    width: 33%;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    line-height: 1.6;
    padding-right: 14px;
   
}

.hero_title{
    font-size: 55px;
    font-weight: bold;
    padding-bottom:50px
}

#down-arrow{
    width: 69px;
    height: 69px;
    font-size: 68px;
}

.hero_col-2{
    width: 66%;
    position: relative;
}

.hero_col-2 img{
    width: 100%;
    position: absolute;
    top:0px;
}

/* section plane-business */
.plane-business{
    padding-top: 100px;
}

.container-small h2{
    font-size: 40px;
}

.plane-row-card{
    display: flex;
    width: calc(100% / 3);
}

